--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing=20px>
         <tr>
-            <td><img src="my profile.jpg"height="150px"width="150px"alt="My Profile"></td>
+            <td><img src="my profile.png"height="150px"width="150px"alt="My Profile"></td>
             <td><h1>My Website</h1>
                 <p>
                     <em><a href="https://www.google.com/search?q=full+stack+developer&oq=full+stack+developer&aqs=chrome..69i57.28820j0j7&sourceid=chrome&ie=UTF-8">Full Stack Developer</a></em>
